[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-bls12-381 = "0.4"
ark-serialize = { version = "=0.4.1", features = ["derive"] }
serde = { version = "=1.0.198" }
serde_bytes = "0.11"
